# figure-userprofile

./: Cargo.toml  README.MD  build.rs  database.ddl  package-lock.json  package.json  script.js
.sqlx/: query-16d84c4b9f4ec2979ad91eedc911a9571dcae8915a1830461a7cd6387fcb5c0a.json
api/http/: user.http
proto/: auth.proto
src/: context.rs  environment.rs  main.rs  server_errors.rs  state.rs
src/application/: application_error.rs  domain_event_dispatcher.rs  environment.rs  errors.rs  migration_runner_trait.rs  mod.rs  server_errors.rs  state.rs  transaction.rs
src/application/connectors/: auth_connector.rs  mod.rs
src/application/domain_event_handlers/: mod.rs  user_created.rs
src/application/error_handling/: application_error.rs  error_info.rs  mod.rs  repository_error.rs  route_error.rs
src/application/errors/: application_error.rs  http_route_error.rs  mod.rs  repository_error.rs
src/application/http/: error_response.rs  mod.rs
src/application/miscellaneous/: mod.rs
src/application/profile/: dtos.rs  http_router.rs  http_routes.rs  mod.rs  repository.rs  routes.rs  service.rs
src/application/repository_traits/: user_repository.rs
src/application/routes/: error_response.rs  mod.rs  profile_routes.rs  user_routes.rs
src/application/services/: mod.rs  profile_service.rs  user_service.rs
src/application/user/: repository.rs  routes.rs  service.rs
src/application/user_profile/: http_router.rs  http_routes.rs  mod.rs  repository.rs  routes.rs  service.rs
src/domain/: mod.rs  profile.rs  user.rs
src/domain/profile/: errors.rs  mod.rs  profile.rs
src/domain/user/: errors.rs  user.rs
src/infrastructure/: auth_connector.rs  logging.rs  mod.rs  secure_hasher.rs  secure_rand_generator.rs  session.rs  to_json_string.rs  traits.rs  transaction.rs
(+52 files in other folders)
